[package]
name = "rs-dungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
sdl2 = { version = "0.36", features = ["ttf"] }
specs = { version = "0.20.0", features = ["specs-derive"] }