[package]
name = "rs-dungeon"
version = "0.1.0"
edition = "2021"
# just dependencies opt-level = 1
#[profile.dev.package."*"]
#opt-level = 1

[dependencies]
specs = { version = "0.20.0", features = ["specs-derive"] }
ggez = { version = "0.9.3" }
doryen-fov = { version = "0.1.1" }
rand = { version = "0.8.5", features = [] }
rand_pcg = "0.3.1"